--- a/historie.html
+++ b/historie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velkommen til Jul i Aalborg City</title>
+    <title>Historien bag Jul på Gammeltorv</title>
     <link href="assets/main.css" rel="stylesheet">
 
 
@@ -61,7 +61,7 @@
 
 
 <!---nav slut-->
-<!---forside start-->
+<!---historie start-->
 
 
 
@@ -161,7 +161,7 @@
 
 
 
-<!---forside slut-->
+<!---historie slut-->
 <!---footer start-->
 
 
@@ -215,3 +215,4 @@
 <!---footer slut-->
 </body>
 </html>
+
