--- a/julelystaending.html
+++ b/julelystaending.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velkommen til Jul i Aalborg City</title>
-    <link href="assets/main.css" rel="stylesheet">
+    <title>Tændning af julelys</title>
+    <link href="assets/main.css" rel="stylesheet">7
 
-
+    
 </head>
 <body>
 <!---nav start-->
@@ -61,7 +61,7 @@
 
 
 <!---nav slut-->
-<!---forside start-->
+<!---julelys start-->
 
 
 
@@ -161,7 +161,7 @@
 
 
 
-<!---forside slut-->
+<!---julelys slut-->
 <!---footer start-->
 
 
@@ -212,6 +212,6 @@
 
 
 
-<!---footer slut-->
+<!---footer slut-->   
 </body>
 </html>
