--- a/detskerogsaa.html
+++ b/detskerogsaa.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velkommen til Jul i Aalborg City</title>
-    <link href="assets/main.css" rel="stylesheet">
+    <title>Det sker også i Aalborg</title>
+    <link href="main/styles.css" rel="stylesheet">
 
-
+    
 </head>
 <body>
 <!---nav start-->
@@ -61,7 +61,7 @@
 
 
 <!---nav slut-->
-<!---forside start-->
+<!---det sker også i aalborg start-->
 
 
 
@@ -161,7 +161,7 @@
 
 
 
-<!---forside slut-->
+<!---det sker også i aalborg slut-->
 <!---footer start-->
 
 
@@ -212,6 +212,7 @@
 
 
 
-<!---footer slut-->
+<!---footer slut-->    
 </body>
 </html>
+
