--- a/boder.html
+++ b/boder.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boder</title>
-    <link href="assets/boder.css" rel="stylesheet">
+    <link href="assets/main.css" rel="stylesheet">
 
     
 </head>
