--- a/detskerogsaa.html
+++ b/detskerogsaa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Det sker også i Aalborg</title>
-    <link href="main/styles.css" rel="stylesheet">
+    <link href="main/main.css" rel="stylesheet">
 
     
 </head>
