--- a/juletraestaending.html
+++ b/juletraestaending.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juletræstændning med Julemanden</title>
-    <link href="assets/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
 
 </head>
-<body>
+<body class="grid-container">
 <!---nav start-->
 
 
@@ -61,41 +61,40 @@
 
 
 <!---nav slut-->
-<!---juletræstændning med julemanden start-->
+<section class="juletraestaending-text">
+    <h1 class="headline-one">Mød julemanden og se når</h1>
+    <h1 class="headline-two">lysene tændes i det store juletræ</h1>
+    <p>Vær med når byen kommer til at emne af nostalgisk julestemning med både julemandens ankomst og
+        juletræstændingen på Nytorv den 20. november.<br>
 
+        <br>Dagen skydes i gang allerede 10.45, hvor Aalborg Gardens Nisseorkester underholder, hvorefter selveste
+        julemanden ankommer ved Honnørkajen kl. 11 og hilser på alle børn og barnlige sjæle.<br>
 
+        <br>Klokken 12 kører julemanden og borgmesteren i kane gennem byens gader, og et par timer senere inviteres
+        aalborgenserne ned til det nye Nytorv, hvor Aalborg Garden spiller ved juletræet kl. 15. En halv time senere
+        tændes det store træ, der er rejst hele vejen fra Frederiksstad i Norge til Nordens Paris, Aalborg.<br>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <br>Efter juletræstændingen bliver der serveret gløgg og æbleskiver foran Aalborg Rådhuset.
+    </p>
+</section>
+<section>
+    <div class="juletraestaending-program">
+        <ul>
+            <li>Kl. 10.45: Aalborg Gardens Nisseorkester underholder.</li>
+            <li>Kl. 11.00: Julemandens skib lægger til ved Honnørkajen. Julemanden hilser derefter på alle børn.
+            </li>
+            <li>Kl. 11.45: Borgmester Thomas Kastrup-Larsen holder velkomsttale til Julemanden.</li>
+            <li>Kl. 12:00: Julemanden og borgmesteren kører i kane igennem byens gader.</li>
+            <li>Kl. 14.30: Optog fra Gabels Torv med Aalborg Garden, Julemanden, borgmester Thomas Kastrup-Larsen og
+                ordfører fra Fredrikstad Siri Martinsen i beredskabets gamle brandbil. Optoget ender ved Nytorv.</li>
+            <li>Kl. 15.00: Aalborg Garden spiller ved juletræet.</li>
+            <li>Kl. 15.00: Aalborg Garden spiller ved juletræet.</li>
+            <li>Kl. 15.30: Juletræet tændes. Der serveres efterfølgende gløgg og æbleskiver foran Aalborg Rådhus.</li>
+        </ul>
+    </div>
+    <img src="assets/img/Juletræ-nytorv-800x480.jpg" alt="billede af juletræ" class="img-juletræ">
+    <img src="assets/img/Julemanden-800x480.jpg" alt="billede af julemanden" class="img-julemand">
+</section>
 
 
 
