--- a/juletraestaending.html
+++ b/juletraestaending.html
@@ -92,8 +92,8 @@
             <li>Kl. 15.30: Juletræet tændes. Der serveres efterfølgende gløgg og æbleskiver foran Aalborg Rådhus.</li>
         </ul>
     </div>
-    <img src="assets/img/Juletræ-nytorv-800x480.jpg" alt="billede af juletræ" class="img-juletræ">
-    <img src="assets/img/Julemanden-800x480.jpg" alt="billede af julemanden" class="img-julemand">
+    <img class="img-juletrae" src="assets/img/Juletræ-nytorv-800x480.jpg" alt="billede af juletræ">
+    <img class="img-julemand" src="assets/img/Julemanden-800x480.jpg" alt="billede af julemanden">
 </section>
 
 
