--- a/tivoli.html
+++ b/tivoli.html
@@ -9,7 +9,7 @@
 
 
 </head>
-<body>
+<bod class="red">
 <!---nav start-->
 
 
@@ -61,7 +61,10 @@
 
 
 <!---nav slut-->
-<!---tivoli start-->
+<section>
+
+
+</section>
 
 
 
