--- a/tivoli.html
+++ b/tivoli.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tivoli</title>
-    <link href="assets/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
 
 </head>
-<bod class="red">
-<!---nav start-->
 
+<body class="page-color">
+    <!---nav start-->
 
 
 
@@ -60,11 +61,31 @@
 
 
 
-<!---nav slut-->
-<section>
 
+    <!---nav slut-->
 
-</section>
+<div class="tivoli-banner"></div>
+    <h1 class="tivoli-title">Julens tivoli</h1>
+    <section class="tivoli-grid-container">
+        <article>
+            <img src="assets/img/IMG_4787.jpg" alt="Pariserhjul">
+            <div class="tivoli-text-container">
+                <h3>Pariserhjulet</h3>
+                <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner igen sammen med
+                    julemarkedet d. 19 november.</p>
+                <p class="tivoli-price">xx kr.</p>
+            </div>
+        </article>
+        <article>
+            <img src="assets/img/IMG_4787.jpg" alt="Pariserhjul">
+            <div class="tivoli-text-container">
+                <h3>Pariserhjulet</h3>
+                <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner igen sammen med
+                    julemarkedet d. 19 november.</p>
+                <p class="tivoli-price">xx kr.</p>
+            </div>
+        </article>
+    </section>
 
 
 
@@ -164,9 +185,9 @@
 
 
 
-<!---tivoli slut-->
-<!---footer start-->
 
+    <!---tivoli slut-->
+    <!---footer start-->
 
 
 
@@ -215,7 +236,8 @@
 
 
 
-<!---footer slut-->
+
+    <!---footer slut-->
 </body>
-</html>
 
+</html>
