--- a/tivoli.html
+++ b/tivoli.html
@@ -64,25 +64,25 @@
 
     <!---nav slut-->
 
-<div class="tivoli-banner"></div>
-    <h1 class="tivoli-title">Julens tivoli</h1>
+    <div class="tivoli-banner"></div>
+    <h1 class="tivoli-title">Julens Tivoli</h1>
     <section class="tivoli-grid-container">
         <article>
             <img src="assets/img/IMG_4787.jpg" alt="Pariserhjul">
             <div class="tivoli-text-container">
-                <h3>Pariserhjulet</h3>
+                <h4>Pariserhjulet</h4>
                 <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner igen sammen med
                     julemarkedet d. 19 november.</p>
-                <p class="tivoli-price">xx kr.</p>
+                <p class="tivoli-price">Pris: xx kr.</p>
             </div>
         </article>
         <article>
-            <img src="assets/img/IMG_4787.jpg" alt="Pariserhjul">
+            <img src="assets/img/IMG_8695.JPG" alt="Juletoget">
             <div class="tivoli-text-container">
-                <h3>Pariserhjulet</h3>
-                <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner igen sammen med
-                    julemarkedet d. 19 november.</p>
-                <p class="tivoli-price">xx kr.</p>
+                <h4>Juletoget</h4>
+                <p>Prøv også en tur i det flotte juletog, som kører fra Gammeltorv og videre rundt i byen i julemarkedets
+                    åbningstider.<br></p>
+                <p class="tivoli-price">Pris: xx kr.</p>
             </div>
         </article>
     </section>
