--- a/tivoli.html
+++ b/tivoli.html
@@ -71,7 +71,7 @@
             <img src="assets/img/IMG_4787.jpg" alt="Pariserhjul">
             <div class="tivoli-text-container">
                 <h4>Pariserhjulet</h4>
-                <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner igen sammen med
+                <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner sammen med
                     julemarkedet d. 19 november.</p>
                 <p class="tivoli-price">Pris: xx kr.</p>
             </div>
@@ -80,7 +80,7 @@
             <img src="assets/img/IMG_8695.JPG" alt="Juletoget">
             <div class="tivoli-text-container">
                 <h4>Juletoget</h4>
-                <p>Prøv også en tur i det flotte juletog, som kører fra Gammeltorv og videre rundt i byen i julemarkedets
+                <p>Prøv også en tur i hyggelige juletog, som kører fra Gammeltorv og videre rundt i byen i julemarkedets
                     åbningstider.<br></p>
                 <p class="tivoli-price">Pris: xx kr.</p>
             </div>
