--- a/tivoli.html
+++ b/tivoli.html
@@ -68,7 +68,7 @@
     <h1 class="tivoli-title">Julens Tivoli</h1>
     <section class="tivoli-grid-container">
         <article>
-            <img src="assets/img/IMG_4787.jpg" alt="Pariserhjul">
+            <img src="assets/img/Pariserhjul.jpg" alt="Pariserhjul">
             <div class="tivoli-text-container">
                 <h4>Pariserhjulet</h4>
                 <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner sammen med
@@ -77,7 +77,7 @@
             </div>
         </article>
         <article>
-            <img src="assets/img/IMG_8695.JPG" alt="Juletoget">
+            <img src="assets/img/juletog.jpg" alt="Juletog">
             <div class="tivoli-text-container">
                 <h4>Juletoget</h4>
                 <p>Prøv også en tur i hyggelige juletog, som kører fra Gammeltorv og videre rundt i byen i julemarkedets
