--- a/tivoli.html
+++ b/tivoli.html
@@ -63,8 +63,8 @@
 
 
     <!---nav slut-->
-
-    <div class="tivoli-banner"></div>
+    <div class="tivoli-banner left-side"></div>
+    <div class="tivoli-banner right-side"></div>
     <h1 class="tivoli-title">Julens Tivoli</h1>
     <section class="tivoli-grid-container">
         <article>
@@ -86,6 +86,8 @@
             </div>
         </article>
     </section>
+
+
 
 
 
