--- a/tivoli.html
+++ b/tivoli.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="page-color">
+<body class="tivoli-page-color">
     <!---nav start-->
 
 
@@ -63,8 +63,8 @@
 
 
     <!---nav slut-->
-    <div class="tivoli-banner left-side"></div>
-    <div class="tivoli-banner right-side"></div>
+    <div class="tivoli-banner tivoli-banner-left-side"></div>
+    <div class="tivoli-banner tivoli-banner-right-side"></div>
     <h1 class="tivoli-title">Julens Tivoli</h1>
     <section class="tivoli-grid-container">
         <article>
