--- a/juletraestaending.html
+++ b/juletraestaending.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,9 @@
 
 
 </head>
-<body class="grid-container">
-<!---nav start-->
 
+<body class="juletraestaending-page-color">
+    <!---nav start-->
 
 
 
@@ -60,12 +61,45 @@
 
 
 
-<!---nav slut-->
 
+    <!---nav slut-->
+    <h1 class="juletraestaending-title juletraestaending-title-margin">Mød julemanden og se når</h1>
+    <h1 class="juletraestaending-title">lysene tændes i det store juletræ</h1>
+    <p class="juletraestanding-text">Vær med når byen kommer til at emne af nostalgisk julestemning med både julemandens
+        ankomst og
+        juletræstændingen på Nytorv den 20. november.<br>
 
+        <br>Dagen skydes i gang allerede 10.45, hvor Aalborg Gardens Nisseorkester underholder, hvorefter selveste
+        julemanden ankommer ved Honnørkajen kl. 11 og hilser på alle børn og barnlige sjæle.<br>
 
+        <br>Klokken 12 kører julemanden og borgmesteren i kane gennem byens gader, og et par timer senere inviteres
+        aalborgenserne ned til det nye Nytorv, hvor Aalborg Garden spiller ved juletræet kl. 15. En halv time senere
+        tændes det store træ, der er rejst hele vejen fra Frederiksstad i Norge til Nordens Paris, Aalborg.<br>
 
+        <br>Efter juletræstændingen bliver der serveret gløgg og æbleskiver foran Aalborg Rådhuset.
+    </p>
 
+    <section class="juletraestaending-program-grid-container">
+        <div class="juletraestaending-program-text-container">
+            <h4>Det fulde program</h4>
+            <ul>
+                <li>Kl. 10.45: Aalborg Gardens Nisseorkester underholder.</li>
+                <li>Kl. 11.00: Julemandens skib lægger til ved Honnørkajen. Julemanden hilser derefter på alle børn.
+                </li>
+                <li>Kl. 11.45: Borgmester Thomas Kastrup-Larsen holder velkomsttale til Julemanden.</li>
+                <li>Kl. 12:00: Julemanden og borgmesteren kører i kane igennem byens gader.</li>
+                <li>Kl. 14.30: Optog fra Gabels Torv med Aalborg Garden, Julemanden, borgmester Thomas Kastrup-Larsen og
+                    ordfører fra Fredrikstad Siri Martinsen i beredskabets gamle brandbil. Optoget ender ved Nytorv.
+                </li>
+                <li>Kl. 15.00: Aalborg Garden spiller ved juletræet.</li>
+                <li>Kl. 15.00: Aalborg Garden spiller ved juletræet.</li>
+                <li>Kl. 15.30: Juletræet tændes. Der serveres efterfølgende gløgg og æbleskiver foran Aalborg Rådhus.
+                </li>
+            </ul>
+        </div>
+        <img src="assets/img/Juletræ-nytorv-800x480.jpg" alt="juletræ på nytorv"> 
+        <img src="assets/img/Julemanden-800x480.jpg" alt="julemanden"> 
+    </section>
 
 
 
@@ -81,16 +115,30 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
+    <!---comment--->
+    <!-- <div class="tivoli-banner tivoli-banner-left-side"></div>
+    <div class="tivoli-banner tivoli-banner-right-side"></div>
+    <h1 class="tivoli-title">Julens Tivoli</h1>
+    <section class="tivoli-grid-container">
+        <article>
+            <img src="assets/img/Pariserhjul.jpg" alt="Pariserhjul">
+            <div class="tivoli-text-container">
+                <h4>Pariserhjulet</h4>
+                <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner sammen med
+                    julemarkedet d. 19 november.</p>
+                <p class="tivoli-price">Pris: xx kr.</p>
+            </div>
+        </article>
+        <article>
+            <img src="assets/img/juletog.jpg" alt="Juletog">
+            <div class="tivoli-text-container">
+                <h4>Juletoget</h4>
+                <p>Prøv også en tur i hyggelige juletog, som kører fra Gammeltorv og videre rundt i byen i julemarkedets
+                    åbningstider.<br></p>
+                <p class="tivoli-price">Pris: xx kr.</p>
+            </div>
+        </article>
+    </section>
 
 
 
@@ -127,7 +175,7 @@
     </div>
     <img class="img-juletrae" src="assets/img/Juletræ-nytorv-800x480.jpg" alt="billede af juletræ">
     <img class="img-julemand" src="assets/img/Julemanden-800x480.jpg" alt="billede af julemanden">
-</section>
+</section> -->
 
 
 
@@ -193,8 +241,8 @@
 
 
 
-<!---juletræstænding med julemanden slut-->
-<!---footer start-->
+    <!---juletræstænding med julemanden slut-->
+    <!---footer start-->
 
 
 
@@ -244,7 +292,7 @@
 
 
 
-<!---footer slut-->
+    <!---footer slut-->
 </body>
-</html>
 
+</html>
