--- a/juletraestaending.html
+++ b/juletraestaending.html
@@ -97,8 +97,10 @@
                 </li>
             </ul>
         </div>
-        <img src="assets/img/Juletræ-nytorv-800x480.jpg" alt="juletræ på nytorv"> 
-        <img src="assets/img/Julemanden-800x480.jpg" alt="julemanden"> 
+        <div class="image-container">
+            <img src="assets/img/Juletræ-nytorv-800x480.jpg" alt="juletræ på nytorv">
+            <img src="assets/img/Julemanden-800x480.jpg" alt="julemanden">
+        </div>
     </section>
 
 
