--- a/detskerogsaa.html
+++ b/detskerogsaa.html
@@ -63,7 +63,30 @@
 <!---nav slut-->
 <!---det sker også i aalborg start-->
 
-<h1>hej</h1>
+<section>
+    <div class="aalborgbanner-højre"></div>
+    <h1>Det sker også i Aalborg</h1>
+    <article>
+        <h2>Besøg den hyggelige udendørs skøjtebane</h2>
+        <p>I vintermånederne forvandler C.W. Obels Plads sig til et sandt skøjtemekka, hvor store som små kan slå sig løs og prøve kræfter med den anlagte skøjtebane, som skaber vinterstemning i hjertet af Aalborg.</p>
+        <a href="https://www.aalborg.dk/oplevelser/sport/skoejteloeb">LÆS MERE</a>
+        <img src="assets/img/Skøjtebane.jpg" alt="Skøjtebanen i på C.W Obelsplads">
+    </article>
+    <article>
+        <h2>Shopping i Aalborg City</h2>
+        <p>I Aalborg er der shopping for enhver smag og pengepung. Masser af små spændende specialbutikker, populære mærkevarebutikker, supermarkeder og stormagasiner og -centre. </p>
+        <a href="https://aalborgcity.dk/vi-er-aalborg-city/">LÆS MERE</a>
+        <img src="assets/img/shopping.jpg" alt="Billede af Nytorv og omkringliggende butikker">
+    </article>
+    <article>
+        <h2>Black Friday</h2>
+        <p>Find de bedste tilbud, når Black Friday skydes i gang i Aalborg.</p>
+        <a href="https://aalborgcity.dk/aabningstider/">LÆS MERE</a>
+        <img src="assets/img/black-friday.jpg" alt="Black friday teskt med guld stjerner omkring">
+    </article>
+    <div class="aalborgbanner-venstre"></div>
+
+</section>
 
 
 
