--- a/juletraestaending.html
+++ b/juletraestaending.html
@@ -98,8 +98,8 @@
             </ul>
         </div>
         <div class="image-container">
-            <img src="assets/img/Juletræ-nytorv-800x480.jpg" alt="juletræ på nytorv">
-            <img src="assets/img/Julemanden-800x480.jpg" alt="julemanden">
+            <img class="juletrae-img" src="assets/img/Juletræ-nytorv-800x480.jpg" alt="juletræ på nytorv">
+            <img class="julemand-img" src="assets/img/Julemanden-800x480.jpg" alt="julemanden">
         </div>
     </section>
 
