--- a/juletraestaending.html
+++ b/juletraestaending.html
@@ -63,6 +63,8 @@
 
 
     <!---nav slut-->
+    <div class="juletraestaending-banner-left-side"></div>
+    <div class="juletraestaending-banner-left-side"></div>
     <h1 class="juletraestaending-title juletraestaending-title-margin">Mød julemanden og se når</h1>
     <h1 class="juletraestaending-title">lysene tændes i det store juletræ</h1>
     <p class="juletraestanding-text">Vær med når byen kommer til at emne af nostalgisk julestemning med både julemandens
