--- a/tivoli.html
+++ b/tivoli.html
@@ -72,7 +72,7 @@
             <div class="tivoli-text-container">
                 <h4>Pariserhjulet</h4>
                 <p>Kom med op og nyd udsigten over byen, når det traditionsrige pariserhjul åbner sammen med
-                    julemarkedet d. 19 november.</p>
+                    julemarkedet d. 19 november</p>
                 <p class="tivoli-price">Pris: xx kr.</p>
             </div>
         </article>
