--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 
     <!---nav slut-->
     <!---forside start-->
+    <div class="corona">
+      <p>!Gældende Corona retningslinjer! Der er ingen krav om coronapas eller mundbind. Vi opfordrer folt til at holde afstand, og blive hjemme hvis man udviser symptomer.</p>
+    </div>
     <main class="forside-container">
       <div class="forside-top">
         <h1>Jul i Aalborg City<br />Julestemning for hele familien</h1>
