--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!---nav slut-->
     <!---forside start-->
     <div class="corona">
-      <p>!Gældende Corona retningslinjer! Der er ingen krav om coronapas eller mundbind. Vi opfordrer folt til at holde afstand, og blive hjemme hvis man udviser symptomer.</p>
+      <p>!Gældende Corona retningslinjer! Der er ingen krav om coronapas eller mundbind. Vi opfordrer folk til at holde afstand og Blive hjemme hvis man udviser symptomer.</p>
     </div>
     <main class="forside-container">
       <div class="forside-top">
