--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velkommen til Jul i Aalborg City</title>
-    <link href="assets/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
 
 </head>
 <body>
 <!---nav start-->
+<header>
+     
+    <h1>Jul på Gammeltorv
+    </h1>
 
+    <ul>
+        <li><a href="boder.html">Boder</a></li>
+        <li><a href="tivoli.html">Tivoli</a></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)"
+            class="dropbtn">Events</a>
+            <div class="dropdown-content">
+        <a href="julelystaending.html">Julelystænding</a>
+        <a href="juletraestaending.html">Juletræstænding</a></li>
+        <li><a href="historie.html">Historie</a></li>
+        <li><a href="detskerogsaa.html">Det sker også i Aalborg</a></li>
+
+    </ul>
+</div>
+
+
+</header>
 
 
 
