--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <!---nav start-->
 <header>
      
-    <h1>Jul på Gammeltorv
-    </h1>
+    <h1>Jul på Gammeltorv</h1>
 
     <ul>
         <li><a href="boder.html">Boder</a></li>
@@ -184,6 +183,70 @@
 
 <!---forside slut-->
 <!---footer start-->
+<footer>
+   <div class="footer-boks1">
+    <ul>
+        <li>
+            Aalborg Citys Administration
+            <ul>
+                <li>Lille Kongensgade 6</li>
+                <li>9000 Aalborg</li>
+                <li>CVR. nr. 13 86 97 74</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<div class="footer-boks2">
+    <ul>
+        <li>
+            Citymanager
+            <ul>
+                <li>Stephan Scheelke</li>
+                <li>Telefon +45 25 50 90 01</li>
+                <li>Citymanager@aalborgcity.dk</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<div class="footer-boks3">
+    <ul>
+        <li>
+            Eventkoordinator
+            <ul>
+                <li>Cecilie Haversen</li>
+                <li>Telefon +45 25 50 90 02</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
+<div class="logo">
+    <img src="assets/img/AalborgCityLogo.png" alt="AalborgCityLogo">
+</div>
+
+<div class="footer-boks4">
+    <ul>
+        <li>
+            Åbningstiderne på Julemarkedet
+            <ul>
+                <li>Mandag - Torsdag: 12.00 - 17.30</li>
+                <li>Fredag: 12.00 - 19.00</li>
+                <li>Lørdag: 10.00 - 18.00</li>
+                <li>Søndag: 10.00 - 16.00</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
+<div class="footer-boks5">
+  <p>Fredag den 26. november er der åbent fra kl 12.00 - 22-00 i forbindelse med Black Friday.</p>
+</div>
+<div class="footer-boks6">
+    <p>Fra lørdag 18. december til og med torsdag 23 december er der åbent hver dag fra kl 10.00 - 19.00</p>
+</div>
+
+</footer>
+ 
 
 
 
